# nanoG1

./: .gitignore  README.md  RESULTS.md  pyproject.toml  speedrun.sh  train.py
bench/: README.md  bench_genesis.py  bench_mjx.py  bench_nanog1.py  bench_ours.py  bench_warp.py
deploy/: README.md  build_policy.sh  deploy_g1.py  nanog1_policy.c
tools/: extract_g1_model.py
web/: g1_demo.c  shell.html
